[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/hedgehog_pwr_sheet_v0.2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Hedgelord.gd" type="Script" id=2]
[ext_resource path="res://Hedgehud.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/hedgehog_sheet.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 32.0

[sub_resource type="Animation" id=2]
resource_name = "Attack"
length = 0.61
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 6, 5, 4 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Death"
length = 0.65
tracks/0/type = "value"
tracks/0/path = NodePath("HedgeLordDeathSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=4]
length = 0.41
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[node name="Hedgelord" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )
vframes = 4
hframes = 2
frame = 4

[node name="HedgeLordDeathSprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
vframes = 3
hframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Attack = SubResource( 2 )
anims/Death = SubResource( 3 )
anims/Idle = SubResource( 4 )

[node name="Energy_blast_attk_timer" type="Timer" parent="."]

[node name="Attack_timer" type="Timer" parent="."]
wait_time = 3.75
one_shot = true

[node name="Hedgehud" parent="." instance=ExtResource( 3 )]

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
pitch_scale = 0.8
[connection signal="timeout" from="Energy_blast_attk_timer" to="." method="_on_Energy_blast_attk_timer_timeout"]
[connection signal="timeout" from="Attack_timer" to="." method="_on_Attack_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
